--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <link rel="stylesheet" href="./dist/style.css"/>
+    <script src="https://kit.fontawesome.com/cc60ff0d42.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
@@ -17,7 +18,7 @@
             </div>
             <div class="navWrapper-right">
                 <button class="button-white">Sign up</button>
-                <div class="navWrapper-ul-replacement"><a href="#"><img class="mobile-navwrapper-menu" src="img/Line2.png"></a></div>
+                <div class="navWrapper-ul-replacement"><a href="#"><i class="fa-solid fa-bars" style="color: #ffffff;"></i></a></div>
                 <!---->
             </div>
             
